[project]
name = "nancy"
version = "10.0.0"
description = "Simple templating system"
license = {text = "GPL v3 or later"}
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/nancy"}
requires-python = ">= 3.9"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
nancy = "nancy:main"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = [
    "setuptools >= 60",
]

[tool.setuptools]
packages = ["nancy"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "D415", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
