[project]
name = "nancy"
version = "12.0.0"
description = "Simple templating system"
license = "GPL-3.0-or-later"
authors = [
    {name = "Reuben Thomas", email = "rrt@sc3d.org"}
]
readme = "README.md"
urls = {Homepage = "https://github.com/rrthomas/nancy"}
requires-python = ">= 3.13"
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3",
]

[project.scripts]
nancy = "nancy:main"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[build-system]
requires = [
    "build",
    "pre-commit",
    "setuptools >= 60",
]

[tool.setuptools]
packages = ["nancy"]

[tool.pytest.ini_options]
addopts = "-p no:warnings"
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["D", "E", "F", "I", "UP"]
ignore = ["D1", "D401", "E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
